tdf#114243 sot: catch exceptions in SotStorage::GetFormatID()

This function returns an error code so it might as well convert
exceptions to that for the benefit of clients like lcl_ReadSections().

Change-Id: Iccf21bf64ee81b66dd9b9902b9b952fa48a318e5